# semfs

./: .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATE.md  Cargo.toml  DASHBOARD.md  DOCS.md  Dockerfile  EXPERIMENTS.md  LICENSE  MODELS.md  NOTICE  README.md  SEEDS.md  build_small_hackathon_ideas.md  creativity.md  install.sh  opinions_forming.md  p1.txt  p2.txt  progress.md  semfs_storage_explained.html  skills-lock.json  test_func.txt  users.md  verify.md
.github/workflows/: bash-ci.yml  bash-py-release.yml  bash-release.yml  release.yml
backend-server/: .env.example  README.md  metrics.py  requirements.txt  server.py
benchmarks/aws/: SMOKE_TEST.md  bootstrap_benchmark_host.sh  run_workspace_bench.sh  workspace_narrative.py  workspace_telemetry.py
benchmarks/e2b/: .evo_baseline_src_hash  _xafs_perdp_plain.json  _xafs_perdp_ppr_map.json  _xafs_perdp_ppr_off.json  _xafs_perdp_ppr_on.json  _xafs_perdp_search.json  _xafs_slice_plain.json  _xafs_slice_ppr_on.json  bake_template_v2.py  bake_template_v3.py  build_experiments_dataset.py  cell_driver.py  dashboard.py  evo_bench.py  evo_token_gate.py  experiments_dataset.jsonl  gen_live_dashboard.py  gen_run_dashboard.py  gen_xafs_dashboard.py  glm_heldout_validation.sh  glm_plain_baseline.sh  pm_phase1_select.sh  run_7arm_n3_modal.sh  run_arms89_rep.sh  run_backfill_rep.sh  run_bf_group.sh  (+24 more)
crates/semfs/: Cargo.toml
crates/semfs-core/: Cargo.toml
crates/semfs-core/examples/: build_graph.rs  build_kg.rs  embed_probe.rs  extract_failed.rs  gemma_corpus.rs  gemma_probe.rs  gemma_seed.rs  materialize_fs.rs  materialize_kg.rs  merge_seeds.rs  push_seed.rs  seed_dir.rs  sparse_only.rs  sparse_probe.rs  surface_clean_seed.rs
crates/semfs-core/src/: agent_hint.rs  http.rs  lib.rs  llm.rs
crates/semfs-core/src/api/: dto.rs  mod.rs
crates/semfs-core/src/backend/: chunk.rs  cloud.rs  community.rs  graph.rs  graph_ast.rs  graph_gliner.rs  hidden_kg.rs  mod.rs  pgvector.rs  rank.rs  sqlite_vec.rs
crates/semfs-core/src/backend/graph_ast/: tests.rs
crates/semfs-core/src/cache/: db.rs  digest.rs  file.rs  fs.rs  graph_file.rs  graph_fs.rs  graph_queue.rs  hydration.rs  mod.rs  profile.rs  schema.sql  tests.rs
crates/semfs-core/src/config/: credentials.rs  mod.rs
crates/semfs-core/src/daemon/: client.rs  ipc.rs  mod.rs  protocol.rs  session_cache.rs
crates/semfs-core/src/embed/: cloud.rs  hash.rs  local.rs  mod.rs  stub.rs
crates/semfs-core/src/extract/: legacy_ppt.rs  mod.rs  ocr.rs  ooxml.rs  pdf.rs  spreadsheet.rs  summary.rs
crates/semfs-core/src/mount/: fuse.rs  mod.rs  nfs.rs
crates/semfs-core/src/rerank/: cloud.rs  local.rs  mod.rs
crates/semfs-core/src/sync/: mod.rs  pull.rs  push.rs  scan.rs
crates/semfs-core/src/vfs/: mem.rs  mod.rs  mode.rs  path.rs  traits.rs  types.rs
crates/semfs-core/tests/: ast_kg_e2e.rs  chunk_v2_e2e.rs
crates/semfs-core/tests/fixtures/chanpin/: MANIFEST.md  edge_html_masquerading_as.xlsx  sample.docx  sample.ppt  sample.pptx  sample.xls  sample.xlsx
crates/semfs/src/: main.rs
crates/semfs/src/cmd/: auth.rs  daemon_inner.rs  daemon_runtime.rs  grep.rs  init.rs  install.rs  list.rs  login.rs  logout.rs  logs.rs  marker.rs  mcp.rs  mod.rs  mount.rs  resolve.rs  seed_verify.rs  startup.rs  status.rs  sync.rs  unmount.rs  whoami.rs
crates/semfs/tests/: mcp_stdio.rs
crates/tokopt-gateway/: Cargo.toml  routes.json
crates/tokopt-gateway/src/: compressor.rs  config.rs  configweb.rs  main.rs  optimize.rs  pricing.rs  router.rs  tokens.rs  usage.rs
docker/: Dockerfile.release
docs/: ARCHITECTURE.md
plugin/: README.md  build.sh
railway-worker/: Dockerfile  worker.sh
rcas/: 2026-05-23-cut-corners-backend-adapters.md  2026-05-23-wrong-claim-openrouter-embeddings-rerank.md  2026-05-25-semfs-bench-empty-returned-paths.md  2026-05-25-semfs-bench-orphaned-fuse-mount.md  2026-05-25-workspace-bench-codex-short-circuit.md  2026-05-26-semfs-e2e-402-and-grep-tag-resolution.md  2026-05-27-semfs-claude-ignores-semantic-search.md  2026-05-27-semfs-codex-empty-paths-orphaned-mount-teardown-race.md  2026-05-29-semfs-grep-claude-token-blowup.md  2026-05-30-semfs-local-prewarm-oom-unbounded-rehydration.md  2026-06-01-semfs-prewarm-oom-import-collection.md  2026-06-03-extract-unbounded-large-doc-hang.md  2026-06-03-extract-uncapped-utf8-text-path-node-modules-hang.md  2026-06-04-rrf-chunk-mass-bias-code-lane-pollution.md  2026-06-04-semfs-codex-clean-seed-timeout-poor-local-search-recall.md  2026-06-04-semfs-grep-hangs-post-search-under-load-no-token-savings.md  2026-06-05-agent-search-token-blowup-turn-multiplication.md  2026-06-06-pdf-ocr-fallback-native-engine-rejects-scanned-pdfs.md  2026-06-08-extraction-coverage-cjk-pdf-legacy-ole-empty-placeholders.md  2026-06-08-kg-materialization-race-empty-kg-codex-fabrication.md  2026-06-08-live-kg-extraction-bulk-warm-oom.md  2026-06-08-partial-seed-indexing.md  2026-06-08-stale-build-gemma-q4-seeded-as-e5.md  2026-06-09-agent-filesystem-isolation-research.md  2026-06-11-modal-case-289-metadata-match-too-broad.md  2026-06-11-modal-codex-auth-fails-against-responses-websocket.md  2026-06-11-modal-mountless-grep-cloud-fallback.md  2026-06-11-modal-smoke-shell-dns-blocked.md  2026-06-11-summary-seed-drops-extracted-md.md  2026-06-11-wb-5arm-infra-failure-not-retrieval.md  2026-06-13-claude-semfs-hint-parity-broken-write-outside.md  2026-06-15-grep-timeout-cloud-fallback-panic.md  2026-06-16-semfs-agent-doesnt-transcribe-grep-content.md  2026-06-19-vllm-enforce-eager-throughput-collapse.md  2026-06-20-sqlite-corruption-incremental-commit-modal-preemption.md  2026-06-23-semfs-baked-empty-cases-and-litellm-proxy-degradation.md  2026-06-25-queue-harness-arm-transition-remount-crash.md  2026-06-27-map-gen-exit2-per-sandbox.md  2026-06-30-kaifa-token-bump-doc-layer-loop.md  2026-07-01-map-gen-budget-uncapped-dirs-crashes-codex.md  (+1 more)
scripts/: .gen_labels.json  .run_hash_labels.json  _or_parse.py  build_run_metrics.py  codex-with-local-skills  label_all_gens.py  or_log.sh  sync-local-codex-skills.sh  sync_semfs_drive.sh
semfs-course/: _base.html  index.html
(+721 files in other folders)
