[workspace]
resolver = "2"
members = [
    "crates/semfs-core",
    "crates/semfs",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/supermemoryai/semfs"
authors = ["Supermemory <support@supermemory.ai>"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# errors + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sync primitives + POSIX constants
parking_lot = "0.12"
libc = "0.2"

# HTTP client (M6)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# SQLite cache (M5)
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
lru = "0.12"
# Local vector index (Phase 2/4) — sqlite-vec loadable extension, registered
# statically via sqlite3_auto_extension (compiled in; no shipped .so/.dylib).
sqlite-vec = "0.1.9"
# Local embeddings (Phase 3) — fastembed over ONNX Runtime. Pulls a prebuilt
# onnxruntime binary at build time (spike 3: verify it links on linux-x86_64).
fastembed = "5.13"
# Cloud embedders (Phase 3) — blocking HTTP, runtime-agnostic so it fits the
# sync Embedder trait and works inside the async search path without nesting tokio.
ureq = { version = "2", features = ["json"] }
# L7 entity-graph heuristic extractor (wikilinks / md-links / imports → edges).
regex = "1"

# Mount backends (M3)
# fuser is Linux-only: on macOS it requires macFUSE which we explicitly avoid.
# nfsserve is unix-wide: pure Rust, used as the NFSv3 server on macOS and
# optionally as an alternate backend on Linux.
fuser = "0.17"
nfsserve = "0.11"

# internal
semfs-core = { path = "crates/semfs-core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
