[package]
name = "semfs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "semfs core library — VFS trait, local cache, mount adapters, sync engine, Supermemory API client"

[lib]
name = "semfs_core"
path = "src/lib.rs"

[features]
# Postgres/pgvector backend (Phase 6). `pg` is the PRODUCTION feature — sqlx only,
# for a real Postgres server (what the CLI uses). `pg-local` adds the embedded
# pglite-oxide test server on top, for the gated unit tests; it raises the
# effective MSRV to 1.92 and shouldn't ship in a production binary. We bind
# vectors as text cast to `::vector` (no `pgvector` crate) to keep one sqlx version.
pg = ["dep:sqlx"]
pg-local = ["pg", "dep:pglite-oxide"]

[dependencies]
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring"], optional = true }
pglite-oxide = { version = "0.5", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
fastembed = { workspace = true }
# Fetch a SPECIFIC reranker ONNX variant (int8) from the model's HF repo —
# fastembed's reranker registry is pinned to full-precision onnx/model.onnx.
# Match fastembed's hf-hub features (ureq sync client + native-tls) to share one
# resolved dependency + TLS backend.
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "native-tls"] }
ureq = { workspace = true }
regex = { workspace = true }
directories = { workspace = true }
lru = { workspace = true }
fs2 = "0.4"

# Local document text extractors (L1 parse) — pure-Rust, no native libs.
# `zip` with the miniz_oxide deflate backend (no C). docx/pptx are zip+XML;
# we unzip and join the text runs with quick-xml.
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
# Spreadsheets: calamine reads both OOXML xlsx and legacy OLE2 xls (pure-Rust).
calamine = "0.26"
# Content-addressed cache key for per-sheet LLM summaries (cost + re-seed
# determinism). Already in the lockfile transitively; fast, no C.
blake3 = "1"
# PDF text layer (pure-Rust). Scanned/image-only PDFs have no text layer and
# remain a gap (routed to the unindexed bucket, never silently dropped).
pdf-extract = "0.7"

# Mount backends — target-gated (M3a)
# nfsserve compiles on both macOS and Linux (pure Rust).
# fuser is Linux-only because on macOS it would require macFUSE,
# which we deliberately avoid by using NFSv3-over-localhost instead.
[target.'cfg(unix)'.dependencies]
nfsserve = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { workspace = true }

[dev-dependencies]
tempfile = "3"
