[package]
name = "semfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "semfs CLI — mount your Supermemory container as a local filesystem"

[[bin]]
name = "semfs"
path = "src/main.rs"

[features]
# External Postgres/pgvector backend (SEMFS_STORAGE_BACKEND=pgvector).
# Off by default so the standard build stays lean (no sqlx/Postgres deps).
pg = ["semfs-core/pg"]
# Embedded pglite backend (SEMFS_STORAGE_BACKEND=pglite) — ships an in-process
# Postgres+pgvector, no external server. Superset of `pg`: a pglite-built binary
# supports BOTH embedded pglite AND external pgvector, so it must enable the
# binary's own `pg` cfg too (not just semfs-core/pg-local).
pglite = ["pg", "semfs-core/pg-local"]
# GLiNER2 typed-KG extractor (Candle, GPU-free) for the live/on-write import KG
# path — see semfs-core/gliner-kg. Off by default (pulls Candle + downloads the
# ~1.7GB model on first use).
gliner-kg = ["semfs-core/gliner-kg"]

[dependencies]
semfs-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
