[package]
name = "tokopt-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
axum = "0.7"
regex = { workspace = true }
rusqlite = { workspace = true }
bytes = "1"
futures = { workspace = true }
tokio-stream = "0.1"
